# Gemma4-Pruning

./: README.md  config.py  main.py  notebook.ipynb  pyproject.toml
data/unified/: cache-c9a4a4fbb0b8ad3f.arrow  dataset_info.json  state.json
scripts/: download_dataset.py  evaluate.py  math_utils.py  prune.py
