[project]
name = "gemma-pruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=2.19.1",
    "scikit-learn>=1.8.0",
    "torch>=2.6.0",
    "tqdm>=4.66.5",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
